2024-10-16 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c:
	  Fix bug #3789.

2024-10-16 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c:
	  Generalize a byte-assembly | optimization to make better use of 16-bit stores to stack.

2024-10-15 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCgenconstprop.cc,
	  src/z80/gen.c:
	  Some improvements in optimizations based on generalized constant propagation.

2024-10-15 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCopt.c:
	  Optimize out some casts and assignments earlier, part of RFE #937.
	* src/z80/gen.c:
	  Improve handling of parameters of z80 builtin functions.

2024-10-14 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCopt.c:
	  Optimize out some more casts, part of RFE #937.

2024-10-13 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/stm8/gen.c,
	  src/z80/gen.c:
	  Fix a z80 pointer write codegen bug.

2024-10-12 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/f8/gen.c: fixed warnings
	* src/mos6502/gen.c (genFunction, genEndFunction): fixed bug #3787
	* src/ds390/main.c: cosmetics
	* src/SDCCralloc.hpp: fail for all 1.85.x
	* src/SDCCsalloc.hpp: require Boost >= 1.79
	* src/SDCCgenconstprop.cc,
	* src/SDCClospre.hpp,
	* src/SDCCnaddr.hpp: removed BOOST_VERSION = 1.60 test
	* src/SDCCmem.c (printAllocInfoSeg): print upto 8 registers
	* src/SDCCmem.h: Added void as parameter
	* src/SDCCsymt.h: removed unused IS_RENT

2024-10-12 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/as6500/clean.mk,
	* sdas/as6808/clean.mk,
	* sdas/as8051/clean.mk,
	* sdas/as8xcxxx/clean.mk,
	* sdas/asf8/clean.mk,
	* sdas/asgb/clean.mk,
	* sdas/aspdk13/clean.mk,
	* sdas/aspdk14/clean.mk,
	* sdas/aspdk15/clean.mk,
	* sdas/aspdk16/clean.mk,
	* sdas/asrab/clean.mk,
	* sdas/asstm8/clean.mk,
	* sdas/astlcs90/clean.mk,
	* sdas/asz80/clean.mk,
	* sdas/linksrc/clean.mk,
	* sdas/clean.mk,
	* src/clean.mk,
	* src/port-clean.mk,
	* support/makebin/clean.mk,